include/m_core.h


MIR_C_CORE_DLL(void)   mir_free(void* ptr);


MIR_CORE_DLL(char*)    mir_strdup(const char* str);

struct mir_sha1_ctx
{
  ULONG H[5];
  ULONG W[80];
  int lenW;
  ULONG sizeHi, sizeLo;
};


MIR_CORE_DLL(void) mir_sha1_init(mir_sha1_ctx *ctx);

MIR_CORE_DLL(void) mir_sha1_append(mir_sha1_ctx *ctx, const BYTE *dataIn, size_t len);

MIR_CORE_DLL(void) mir_sha1_finish(mir_sha1_ctx *ctx, BYTE hashout[MIR_SHA1_HASH_SIZE]);

MIR_CORE_DLL(void) mir_sha1_hash(BYTE *dataIn, size_t len, BYTE hashout[MIR_SHA1_HASH_SIZE]);


MIR_CORE_DLL(char*)  rtrim(char *str);


MIR_CORE_DLL(char*)  ltrim(char *str);   // returns pointer to the beginning of string


MIR_CORE_DLL(char*)  ltrimp(char *str);  // returns pointer to the trimmed portion of string


MIR_CORE_DLL(int) wildcmp(const char *name, const char *mask);
	MIR_CORE_DLL(char*) replaceStr(char* &dest, const char *src);

	MIR_CORE_DLL(wchar_t*) replaceStrW(wchar_t* &dest, const wchar_t *src);
	MIR_CORE_DLL(char*) replaceStr(char **dest, const char *src);

	MIR_CORE_DLL(wchar_t*) replaceStrW(wchar_t **dest, const wchar_t *src);


MIR_CORE_DLL(wchar_t*) mir_a2u_cp(const char* src, int codepage);

MIR_CORE_DLL(wchar_t*) mir_a2u(const char* src);

MIR_CORE_DLL(char*)  mir_u2a_cp(const wchar_t* src, int codepage);

MIR_CORE_DLL(char*)  mir_u2a(const wchar_t* src);


///////////////////////////////////////////////////////////////////////////////
// threads

typedef void (__cdecl *pThreadFunc)(void *param);

typedef unsigned (__stdcall *pThreadFuncEx)(void *param);

typedef unsigned (__cdecl *pThreadFuncOwner)(void *owner, void *param);
	MIR_CORE_DLL(INT_PTR) Thread_Push(HINSTANCE hInst, void* pOwner = NULL);
	MIR_CORE_DLL(INT_PTR) Thread_Push(HINSTANCE hInst, void* pOwner);
MIR_CORE_DLL(INT_PTR) Thread_Pop(void);

MIR_CORE_DLL(void)    Thread_Wait(void);

MIR_CORE_DLL(void) Thread_SetName(const char *szThreadName);


MIR_CORE_DLL(void) KillObjectThreads(void* pObject);


///////////////////////////////////////////////////////////////////////////////
// utf8 interface

MIR_CORE_DLL(char*) Utf8Decode(char* str, wchar_t** ucs2);

MIR_CORE_DLL(char*) Utf8DecodeCP(char* str, int codepage, wchar_t** ucs2);

MIR_CORE_DLL(wchar_t*) Utf8DecodeW(const char* str);


MIR_CORE_DLL(char*) Utf8Encode(const char* str);

MIR_CORE_DLL(char*) Utf8EncodeCP(const char* src, int codepage);


MIR_CORE_DLL(char*) Utf8EncodeW(const wchar_t* str);

MIR_CORE_DLL(int)   Ucs2toUtf8Len(const wchar_t *src);


MIR_CORE_DLL(BOOL)  Utf8CheckString(const char* str);

#define mir_utf8decode(A, B)      Utf8Decode(A, B)
#define mir_utf8decodecp(A, B, C) Utf8DecodeCP(A, B, C)
#define mir_utf8encode(A)         Utf8Encode(A)
#define mir_utf8encodecp(A, B)    Utf8EncodeCP(A, B)
#define mir_utf8lenW(A)           Ucs2toUtf8Len(A)


///////////////////////////////////////////////////////////////////////////////

MIR_CORE_DLL(void) UnloadCoreModule(void);